# to-do-bot

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  SystemDesign.md  config.yml  project_tasks.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
app/: Dockerfile  pyproject.toml
app/to_do_bot/: keyboards.py
app/to_do_bot/src/: __init__.py  _bootstrap.py  enums.py  salute_speech_stt.py  schemas.py
simple_bot/: helpers.py  main.py  middleware.py
simple_bot/src/: __init__.py  audio_handler.py  client.py  handler.py  llm.py  salute_speech_stt.py  static.py  store.py
