[project]
name = "audio-to-do"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
        "aiodns>=3.4.0",
        "aiogram>=3.20.0.post0",
        "certifi>=2025.4.26",
        "langchain-community>=0.3.23",
        "langchain-gigachat>=0.3.10",
        "langchain[cache]>=0.3.25",
        "pydub>=0.25.1",
]

[dependency-groups]
dev = [
    "ruff>=0.11.10",
]
